--- a/Opiniometro_WebApp/Opiniometro_WebApp/Web.config
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Web.config
@@ -299,13 +299,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-<<<<<<<<< Temporary merge branch 1
 
-  <connectionStrings><add name="Opiniometro_DatosEntities" connectionString="metadata=res://*/Models.OpiniometroModel.csdl|res://*/Models.OpiniometroModel.ssdl|res://*/Models.OpiniometroModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\ProjectsV13;initial catalog=Opiniometro_Datos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 
-<!-- <connectionStrings><add name="Opiniometro_DatosEntities" connectionString="metadata=res://*/Models.Opiniometro_Model.csdl|res://*/Models.Opiniometro_Model.ssdl|res://*/Models.Opiniometro_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.4.55;initial catalog=Opiniometro;persist security info=True;user id=DeveloperOp;password=devop2019;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings> -->
-</configuration>
-=========
-  <connectionStrings>
-  <add name="Opiniometro_DatosEntities" connectionString="metadata=res://*/Models.Opiniometro_Model.csdl|res://*/Models.Opiniometro_Model.ssdl|res://*/Models.Opiniometro_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.4.55;initial catalog=Opiniometro;persist security info=True;user id=DeveloperOp;password=devop2019;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
-</configuration>
+  <connectionStrings><add name="Opiniometro_DatosEntities" connectionString="metadata=res://*/Models.Opiniometro_Model.csdl|res://*/Models.Opiniometro_Model.ssdl|res://*/Models.Opiniometro_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.4.55;initial catalog=Opiniometro;user id=DeveloperOp;password=devop2019;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+
