Cambios en la vista parcial y el script de Escalar.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -531,6 +531,7 @@
     <Content Include="Views\Asignacion_Formulario\Delete.cshtml" />
     <Content Include="Views\Asignacion_Formulario\Edit.cshtml" />
     <Content Include="Views\Asignacion_Formulario\Index.cshtml" />
+    <Content Include="Views\FormularioCurso\Escalar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\ArchivosCargados\" />
