HUS: consultar pefil, editar perfil y asignar o quitar perfil
consultar perfil terminado, editar perfil (funcionalidad terminada, falta validacion en la vista de la llave primaria) y en asignar o quitar roles los datos ya están en el controlador. También se hizo una actualización del modelo para agregar un procedimiento almacenado que se usa en editar perfil

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -248,6 +248,7 @@
       <DependentUpon>Opiniometro_Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DatosProvisionados.cs" />
+    <Compile Include="Models\EditarPerfil.cs" />
     <Compile Include="Models\Empadronado.cs">
       <DependentUpon>Opiniometro_Model.tt</DependentUpon>
     </Compile>
