Se modifica el diseño de formulario que se muestra a estudiantes.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -401,6 +401,7 @@
     <Content Include="Content\img\plus.png" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\scrollbar-tabla.css" />
+    <Content Include="Content\Formulario.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
