--- a/Opiniometro_WebApp/Opiniometro_WebAppTest/Opiniometro_WebAppTest.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebAppTest/Opiniometro_WebAppTest.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Controllers\AuthControllerTest.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\PerfilControllerTest.cs" />
+    <Compile Include="Controllers\CursosMatriculadosTest.cs" />
     <Compile Include="Controllers\VisualizarFormularioControllerTest.cs" />
     <Compile Include="Controllers\SeccionControllerTest.cs" />
     <Compile Include="Controllers\FormularioControllerTest.cs" />
