Pruebas de not null para administrador controller

--- a/Opiniometro_WebApp/Opiniometro_WebAppTest/Opiniometro_WebAppTest.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebAppTest/Opiniometro_WebAppTest.csproj
@@ -153,7 +153,7 @@
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\PerfilControllerTest.cs" />
     <Compile Include="Controllers\ItemControllerTest.cs" />
-    <Compile Include="Controllers\UnitTest1.cs" />
+    <Compile Include="Controllers\AdministradorControllerTest.cs" />
     <Compile Include="Controllers\VisualizarFormularioControllerTest.cs" />
     <Compile Include="Controllers\SeccionControllerTest.cs" />
     <Compile Include="Controllers\FormularioControllerTest.cs" />
